compiler/src/test/resources/golden/errors/lex_unterminated_triple.dawn
pub fn main() -> Unit !io =
  println("""
  still open
