compiler/src/test/resources/golden/errors/lex_unterminated_triple.err
error: unterminated """ string
  --> lex_unterminated_triple.dawn:2:11
  |
2 |   println("""
  |           ^^^
error: expected an expression, found `<eof>`
  --> lex_unterminated_triple.dawn:4:1
  |
4 | 
  | ^
